# rusthouse-gtk

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/: copilot-instructions.md  copilot-review.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/libs/catalog/: Cargo.toml
crates/libs/catalog/src/: lib.rs
crates/libs/collecting/: Cargo.toml
crates/libs/collecting/src/: lib.rs
crates/libs/common/: Cargo.toml
crates/libs/common/src/: lib.rs
dataset/: manufacturers.json  manufactures.schema.json  railway_companies.json  railway_companies.schema.json  scale.schema.json  scales.json
docs/: datamodel.md  requirements.md
