[workspace]
members = [
    "crates/app",
    "crates/libs/catalog",
]
resolver = "2"

[workspace.package]
authors         = ["CarloMicieli <piovarolo@gmail.com>"]
edition         = "2024"
homepage        = "https://github.com/CarloMicieli/rusthouse-gtk"
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/CarloMicieli/rusthouse-gtk"
rust-version    = "1.89"
version         = "0.1.0"
