[workspace]
members = [
    "crates/app",
    "crates/libs/catalog",
    "crates/libs/collecting",
    "crates/libs/common",
]
resolver = "2"

[workspace.package]
authors         = ["CarloMicieli <piovarolo@gmail.com>"]
edition         = "2024"
homepage        = "https://github.com/CarloMicieli/rusthouse-gtk"
license         = "Apache-2.0"
readme          = "README.md"
repository      = "https://github.com/CarloMicieli/rusthouse-gtk"
rust-version    = "1.89"
version         = "0.1.0"

[workspace.dependencies]
anyhow              = "1.0.99"
chrono              = "0.4.41"
diesel              = { version = "2.2.12", features = ["sqlite"] }
dotenvy             = "0.15.7"
gettext-rs          = "0.7.2"
gtk4                = "0.10.0"
isocountry          = "0.3.2"
itertools           = "0.14.0"
jsonschema          = "0.33.0"
mime                = "0.3.17"
once_cell           = "1.21.3"
pretty_assertions   = "1.4.1"
rand                = "0.9.2"
regex               = "1.11.2"
relm4               = "0.9.1"
relm4-components    = "0.9.1"
relm4-macros        = "0.9.1"
rstest              = "0.26.1"
rust_decimal        = "1.37.2"
rust_decimal_macros = "1.37.1"
slug                = "0.1.6"
thiserror           = "2.0.16"
url                 = "2.5.7"
uuid                = { version = "1.18.0", features = ["v4"] }
validator           = { version = "0.20.0", features = ["derive"] }
